# simple-emulator

./: CMakeLists.txt  README.md  notes_elf
inc/: elf_header.h  elf_program_header.h  elf_reader.h  elf_section_header.h  instruction.h  parser.h  pointer_arithmetic.h
src/: elf_header.c  elf_program_header.c  elf_reader.c  elf_section_header.c  hello.c  main.c  parser.c  pointer_arithmetic.c
src/disassembler/: opcode_table.txt
